--- a/client/src/pages/Overblik.module.css
+++ b/client/src/pages/Overblik.module.css
@@ -380,6 +380,10 @@
         margin-top: 30px;
         margin-bottom: -10px;
     }
+
+    .switchButton {
+        display: none;
+    }
 }
 
 @media screen and (display-mode: standalone) {
